--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "flask-migrate>=4.1.0",
     "flask-sqlalchemy>=3.1.1",
     "gunicorn>=23.0.0",
+    "playwright>=1.56.0",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "yt-dlp[default]>=2025.11.24.232953.dev0",
